@@ -19,8 +19,6 @@
  */
 package ca.uhn.fhir.jpa.search.builder;
 
-import ca.uhn.fhir.context.BaseRuntimeChildDefinition;
-import ca.uhn.fhir.context.BaseRuntimeElementDefinition;
 import ca.uhn.fhir.context.ComboSearchParamType;
 import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.context.FhirVersionEnum;
@@ -56,6 +54,7 @@ import ca.uhn.fhir.jpa.model.entity.BaseTag;
 import ca.uhn.fhir.jpa.model.entity.ResourceHistoryTable;
 import ca.uhn.fhir.jpa.model.entity.ResourceHistoryTablePk;
 import ca.uhn.fhir.jpa.model.entity.ResourceHistoryTag;
+import ca.uhn.fhir.jpa.model.entity.ResourceLink;
 import ca.uhn.fhir.jpa.model.entity.ResourceTag;
 import ca.uhn.fhir.jpa.model.search.SearchBuilderLoadIncludesParameters;
 import ca.uhn.fhir.jpa.model.search.SearchRuntimeDetails;
@@ -77,6 +76,7 @@ import ca.uhn.fhir.jpa.util.BaseIterator;
 import ca.uhn.fhir.jpa.util.CartesianProductUtil;
 import ca.uhn.fhir.jpa.util.CurrentThreadCaptureQueriesListener;
 import ca.uhn.fhir.jpa.util.QueryChunker;
+import ca.uhn.fhir.jpa.util.ScrollableResultsIterator;
 import ca.uhn.fhir.jpa.util.SqlQueryList;
 import ca.uhn.fhir.model.api.IQueryParameterType;
 import ca.uhn.fhir.model.api.Include;
@@ -104,6 +104,7 @@ import ca.uhn.fhir.rest.server.servlet.ServletRequestDetails;
 import ca.uhn.fhir.rest.server.util.CompositeInterceptorBroadcaster;
 import ca.uhn.fhir.rest.server.util.ISearchParamRegistry;
 import ca.uhn.fhir.system.HapiSystemProperties;
+import ca.uhn.fhir.util.SearchParameterUtil;
 import ca.uhn.fhir.util.StopWatch;
 import ca.uhn.fhir.util.StringUtil;
 import ca.uhn.fhir.util.UrlUtil;
@@ -121,11 +122,17 @@ import jakarta.persistence.Query;
 import jakarta.persistence.Tuple;
 import jakarta.persistence.TypedQuery;
 import jakarta.persistence.criteria.CriteriaBuilder;
+import jakarta.persistence.criteria.CriteriaQuery;
+import jakarta.persistence.criteria.Predicate;
+import jakarta.persistence.criteria.Root;
+import jakarta.persistence.criteria.Selection;
 import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.Validate;
 import org.apache.commons.lang3.math.NumberUtils;
 import org.apache.commons.lang3.tuple.Pair;
+import org.hibernate.ScrollMode;
+import org.hibernate.ScrollableResults;
 import org.hl7.fhir.instance.model.api.IAnyResource;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 import org.hl7.fhir.instance.model.api.IIdType;
@@ -136,6 +143,7 @@ import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.transaction.support.TransactionSynchronizationManager;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
@@ -1301,7 +1309,7 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 		return switch (myStorageSettings.getTagStorageMode()) {
 			case VERSIONED -> getPidToTagMapVersioned(theHistoryTables);
 			case NON_VERSIONED -> getPidToTagMapUnversioned(theHistoryTables);
-			default -> Map.of();
+			case INLINE -> Map.of();
 		};
 	}
 
@@ -1588,7 +1596,6 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 							findPartitionIdFieldName,
 							findVersionFieldName,
 							searchPidFieldName,
-							searchPartitionIdFieldName,
 							reverseMode,
 							nextRoundMatches,
 							entityManager,
@@ -1665,7 +1672,6 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 			String findPartitionFieldName,
 			String findVersionFieldName,
 			String searchPidFieldName,
-			String searchPartitionFieldName,
 			boolean reverseMode,
 			List<JpaPid> nextRoundMatches,
 			EntityManager entityManager,
@@ -1764,9 +1770,12 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 
 			// Case 2:
 			Pair<String, Map<String, Object>> canonicalQuery =
-					buildCanonicalUrlQuery(findVersionFieldName, targetResourceTypes, reverseMode, theRequest);
+					buildCanonicalUrlQuery(findVersionFieldName, targetResourceTypes, reverseMode, theRequest, param);
 
-			String sql = localReferenceQuery + "UNION " + canonicalQuery.getLeft();
+			String sql = localReferenceQuery.toString();
+			if (canonicalQuery != null) {
+				sql = localReferenceQuery + "UNION " + canonicalQuery.getLeft();
+			}
 
 			Map<String, Object> limitParams = new HashMap<>();
 			if (maxCount != null) {
@@ -1801,13 +1810,15 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 							nextPartition.iterator().next().getPartitionId());
 				}
 				localReferenceQueryParams.forEach(q::setParameter);
-				canonicalQuery.getRight().forEach(q::setParameter);
+				if (canonicalQuery != null) {
+					canonicalQuery.getRight().forEach(q::setParameter);
+				}
 				limitParams.forEach(q::setParameter);
 
-				@SuppressWarnings("unchecked")
-				List<Tuple> results = q.getResultList();
-				for (Tuple result : results) {
-					if (result != null) {
+				try (ScrollableResultsIterator<Tuple> iter = new ScrollableResultsIterator<>(toScrollableResults(q))) {
+					Tuple result;
+					while (iter.hasNext()) {
+						result = iter.next();
 						Long resourceId = NumberUtils.createLong(String.valueOf(result.get(RESOURCE_ID_ALIAS)));
 						Long resourceVersion = null;
 						if (findVersionFieldName != null && result.get(RESOURCE_VERSION_ALIAS) != null) {
@@ -1824,6 +1835,7 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 						pidsToInclude.add(pid);
 					}
 				}
+				//				myEntityManager.clear();
 			}
 		}
 	}
@@ -1844,25 +1856,38 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 			List<String> desiredResourceTypes,
 			HashSet<JpaPid> pidsToInclude,
 			RequestDetails request) {
-		StringBuilder sqlBuilder = new StringBuilder();
-		sqlBuilder.append("SELECT r.").append(findPidFieldName);
-		sqlBuilder.append(", r.").append(findResourceTypeFieldName);
-		sqlBuilder.append(", r.myTargetResourceUrl");
+
+		record IncludesRecord(
+				Long resourceId, String resourceType, String resourceCanonicalUrl, Long version, Integer partitionId) {}
+
+		CriteriaBuilder cb = entityManager.getCriteriaBuilder();
+		CriteriaQuery<IncludesRecord> query = cb.createQuery(IncludesRecord.class);
+		Root<ResourceLink> root = query.from(ResourceLink.class);
+
+		List<Selection<?>> selectionList = new ArrayList<>();
+		selectionList.add(root.get(findPidFieldName));
+		selectionList.add(root.get(findResourceTypeFieldName));
+		selectionList.add(root.get("myTargetResourceUrl"));
 		if (findVersionFieldName != null) {
-			sqlBuilder.append(", r.").append(findVersionFieldName);
+			selectionList.add(root.get(findVersionFieldName));
+		} else {
+			selectionList.add(cb.nullLiteral(Long.class));
 		}
 		if (myPartitionSettings.isDatabasePartitionMode()) {
-			sqlBuilder.append(", r.").append(findPartitionFieldName);
+			selectionList.add(root.get(findPartitionFieldName));
+		} else {
+			selectionList.add(cb.nullLiteral(Integer.class));
 		}
-		sqlBuilder.append(" FROM ResourceLink r WHERE ");
+		query.multiselect(selectionList);
+
+		List<Predicate> predicates = new ArrayList<>();
 
 		if (myPartitionSettings.isDatabasePartitionMode()) {
-			sqlBuilder.append("r.").append(searchPartitionFieldName);
-			sqlBuilder.append(" = :target_partition_id AND ");
+			predicates.add(
+					cb.equal(root.get(searchPartitionFieldName), cb.parameter(Integer.class, "target_partition_id")));
 		}
 
-		sqlBuilder.append("r.").append(searchPidFieldName);
-		sqlBuilder.append(" IN (:target_pids)");
+		predicates.add(root.get(searchPidFieldName).in(cb.parameter(List.class, "target_pids")));
 
 		/*
 		 * We need to set the resource type in 2 cases only:
@@ -1882,7 +1907,8 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 			// because mySourceResourceType is not part of the HFJ_RES_LINK
 			// index, this might not be the most optimal performance.
 			// but it is for an $everything operation (and maybe we should update the index)
-			sqlBuilder.append(" AND r.mySourceResourceType = :want_resource_type");
+			predicates.add(
+					cb.equal(root.get("mySourceResourceType"), cb.parameter(String.class, "want_resource_type")));
 		} else {
 			wantResourceType = null;
 		}
@@ -1892,18 +1918,22 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 		// (e.g. via Provenance, List, or Group) when in an $everything operation
 		if (myParams != null
 				&& myParams.getEverythingMode() == SearchParameterMap.EverythingModeEnum.PATIENT_INSTANCE) {
-			sqlBuilder.append(" AND r.myTargetResourceType != 'Patient'");
-			sqlBuilder.append(UNDESIRED_RESOURCE_LINKAGES_FOR_EVERYTHING_ON_PATIENT_INSTANCE.stream()
-					.collect(Collectors.joining("', '", " AND r.mySourceResourceType NOT IN ('", "')")));
-		}
-		if (hasDesiredResourceTypes) {
-			sqlBuilder.append(" AND r.myTargetResourceType IN (:desired_target_resource_types)");
+			predicates.add(cb.notEqual(root.get("myTargetResourceType"), "Patient"));
+			predicates.add(cb.not(root.get("mySourceResourceType")
+					.in(UNDESIRED_RESOURCE_LINKAGES_FOR_EVERYTHING_ON_PATIENT_INSTANCE)));
 		}
 
-		String sql = sqlBuilder.toString();
+		if (hasDesiredResourceTypes) {
+			predicates.add(
+					root.get("myTargetResourceType").in(cb.parameter(List.class, "desired_target_resource_types")));
+		}
+
+		query.where(cb.and(predicates.toArray(new Predicate[0])));
+
 		List<Collection<JpaPid>> partitions = partitionBySizeAndPartitionId(nextRoundMatches, getMaximumPageSize());
 		for (Collection<JpaPid> nextPartition : partitions) {
-			TypedQuery<?> q = entityManager.createQuery(sql, Object[].class);
+
+			TypedQuery<IncludesRecord> q = myEntityManager.createQuery(query);
 			q.setParameter("target_pids", JpaPid.toLongList(nextPartition));
 			if (myPartitionSettings.isDatabasePartitionMode()) {
 				q.setParameter(
@@ -1918,45 +1948,40 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 			if (hasDesiredResourceTypes) {
 				q.setParameter("desired_target_resource_types", desiredResourceTypes);
 			}
-			List<?> results = q.getResultList();
+
 			Set<String> canonicalUrls = null;
-			for (Object nextRow : results) {
-				if (nextRow == null) {
-					// This can happen if there are outgoing references which are canonical or point to
-					// other servers
-					continue;
-				}
 
-				Long version = null;
-				Long resourceId = (Long) ((Object[]) nextRow)[0];
-				String resourceType = (String) ((Object[]) nextRow)[1];
-				String resourceCanonicalUrl = (String) ((Object[]) nextRow)[2];
-				Integer partitionId = null;
-				int offset = 0;
-				if (findVersionFieldName != null) {
-					version = (Long) ((Object[]) nextRow)[3];
-					offset++;
-				}
-				if (myPartitionSettings.isDatabasePartitionMode()) {
-					partitionId = ((Integer) ((Object[]) nextRow)[3 + offset]);
-				}
-
-				if (resourceId != null) {
-					JpaPid pid = JpaPid.fromIdAndVersionAndResourceType(resourceId, version, resourceType);
-					pid.setPartitionId(partitionId);
-					pidsToInclude.add(pid);
-				} else if (resourceCanonicalUrl != null) {
-					if (canonicalUrls == null) {
-						canonicalUrls = new HashSet<>();
+			try (ScrollableResultsIterator<IncludesRecord> iter =
+					new ScrollableResultsIterator<>(toScrollableResults(q))) {
+				IncludesRecord nextRow;
+				while (iter.hasNext()) {
+					nextRow = iter.next();
+					if (nextRow == null) {
+						// This can happen if there are outgoing references which are canonical or point to
+						// other servers
+						continue;
 					}
-					canonicalUrls.add(resourceCanonicalUrl);
+
+					Long version = nextRow.version;
+					Long resourceId = nextRow.resourceId;
+					String resourceType = nextRow.resourceType;
+					String resourceCanonicalUrl = nextRow.resourceCanonicalUrl;
+					Integer partitionId = nextRow.partitionId;
+
+					if (resourceId != null) {
+						JpaPid pid = JpaPid.fromIdAndVersionAndResourceType(resourceId, version, resourceType);
+						pid.setPartitionId(partitionId);
+						pidsToInclude.add(pid);
+					} else if (resourceCanonicalUrl != null) {
+						if (canonicalUrls == null) {
+							canonicalUrls = new HashSet<>();
+						}
+						canonicalUrls.add(resourceCanonicalUrl);
+					}
 				}
 			}
 
 			if (canonicalUrls != null) {
-				String message =
-						"Search with _include=* can be inefficient when references using canonical URLs are detected. Use more specific _include values instead.";
-				firePerformanceWarning(request, message);
 				loadCanonicalUrls(request, canonicalUrls, entityManager, pidsToInclude, reverseMode);
 			}
 		}
@@ -1971,8 +1996,16 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 		StringBuilder sqlBuilder;
 		CanonicalUrlTargets canonicalUrlTargets =
 				calculateIndexUriIdentityHashesForResourceTypes(theRequestDetails, null, theReverse);
+		if (canonicalUrlTargets.isEmpty()) {
+			return;
+		}
+
+		String message =
+				"Search with _include=* can be inefficient when references using canonical URLs are detected. Use more specific _include values instead.";
+		firePerformanceWarning(theRequestDetails, message);
+
 		List<List<String>> canonicalUrlPartitions = ListUtils.partition(
-				List.copyOf(theCanonicalUrls), getMaximumPageSize() - canonicalUrlTargets.myHashIdentityValues.size());
+				List.copyOf(theCanonicalUrls), getMaximumPageSize() - canonicalUrlTargets.hashIdentityValues.size());
 
 		sqlBuilder = new StringBuilder();
 		sqlBuilder.append("SELECT ");
@@ -1989,7 +2022,7 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 
 		for (Collection<String> nextCanonicalUrlList : canonicalUrlPartitions) {
 			TypedQuery<Object[]> canonicalResIdQuery = theEntityManager.createQuery(canonicalResSql, Object[].class);
-			canonicalResIdQuery.setParameter("hash_identity", canonicalUrlTargets.myHashIdentityValues);
+			canonicalResIdQuery.setParameter("hash_identity", canonicalUrlTargets.hashIdentityValues);
 			canonicalResIdQuery.setParameter("uris", nextCanonicalUrlList);
 			List<Object[]> results = canonicalResIdQuery.getResultList();
 			for (var next : results) {
@@ -2042,12 +2075,24 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 		return targetResourceTypes;
 	}
 
-	@Nonnull
+	@Nullable
 	private Pair<String, Map<String, Object>> buildCanonicalUrlQuery(
 			String theVersionFieldName,
 			Set<String> theTargetResourceTypes,
 			boolean theReverse,
-			RequestDetails theRequest) {
+			RequestDetails theRequest,
+			RuntimeSearchParam theParam) {
+
+		String[] searchParameterPaths = SearchParameterUtil.splitSearchParameterExpressions(theParam.getPath());
+
+		// If we know for sure that none of the paths involved in this SearchParameter could
+		// be indexing a canonical
+		if (Arrays.stream(searchParameterPaths)
+				.noneMatch(t -> SearchParameterUtil.referencePathCouldPotentiallyReferenceCanonicalElement(
+						myContext, myResourceName, t, theReverse))) {
+			return null;
+		}
+
 		String fieldsToLoadFromSpidxUriTable = theReverse ? "r.src_resource_id" : "rUri.res_id";
 		if (theVersionFieldName != null) {
 			// canonical-uri references aren't versioned, but we need to match the column count for the UNION
@@ -2066,6 +2111,9 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 		// But sp_name isn't indexed, so we use hash_identity instead.
 		CanonicalUrlTargets canonicalUrlTargets =
 				calculateIndexUriIdentityHashesForResourceTypes(theRequest, theTargetResourceTypes, theReverse);
+		if (canonicalUrlTargets.isEmpty()) {
+			return null;
+		}
 
 		Map<String, Object> canonicalUriQueryParams = new HashMap<>();
 		StringBuilder canonicalUrlQuery = new StringBuilder();
@@ -2079,16 +2127,16 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 		canonicalUrlQuery.append("JOIN hfj_spidx_uri rUri ON (");
 		if (myPartitionSettings.isDatabasePartitionMode()) {
 			canonicalUrlQuery.append("rUri.partition_id IN (:uri_partition_id) AND ");
-			canonicalUriQueryParams.put("uri_partition_id", canonicalUrlTargets.myPartitionIds);
+			canonicalUriQueryParams.put("uri_partition_id", canonicalUrlTargets.partitionIds);
 		}
-		if (canonicalUrlTargets.myHashIdentityValues.size() == 1) {
+		if (canonicalUrlTargets.hashIdentityValues.size() == 1) {
 			canonicalUrlQuery.append("rUri.hash_identity = :uri_identity_hash");
 			canonicalUriQueryParams.put(
 					"uri_identity_hash",
-					canonicalUrlTargets.myHashIdentityValues.iterator().next());
+					canonicalUrlTargets.hashIdentityValues.iterator().next());
 		} else {
 			canonicalUrlQuery.append("rUri.hash_identity in (:uri_identity_hashes)");
-			canonicalUriQueryParams.put("uri_identity_hashes", canonicalUrlTargets.myHashIdentityValues);
+			canonicalUriQueryParams.put("uri_identity_hashes", canonicalUrlTargets.hashIdentityValues);
 		}
 		canonicalUrlQuery.append(" AND r.target_resource_url = rUri.sp_uri");
 		canonicalUrlQuery.append(")");
@@ -2134,57 +2182,46 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 				// in this context, so let's just assume it could be anything.
 				targetResourceTypes = possibleTypes;
 			} else {
-				for (var next : mySearchParamRegistry
+				List<RuntimeSearchParam> params = mySearchParamRegistry
 						.getActiveSearchParams(myResourceName, ISearchParamRegistry.SearchParamLookupContextEnum.SEARCH)
 						.values()
 						.stream()
 						.filter(t -> t.getParamType().equals(RestSearchParameterTypeEnum.REFERENCE))
-						.collect(Collectors.toList())) {
+						.toList();
+				for (var next : params) {
 
-					// If the reference points to a Reference (ie not a canonical or CanonicalReference)
-					// then it doesn't matter here anyhow. The logic here only works for elements at the
-					// root level of the document (e.g. QuestionnaireResponse.subject or
-					// QuestionnaireResponse.subject.where(...)) but this is just an optimization
-					// anyhow.
-					if (next.getPath().startsWith(myResourceName + ".")) {
-						String elementName =
-								next.getPath().substring(next.getPath().indexOf('.') + 1);
-						int secondDotIndex = elementName.indexOf('.');
-						if (secondDotIndex != -1) {
-							elementName = elementName.substring(0, secondDotIndex);
+					String paths = next.getPath();
+					for (String path : SearchParameterUtil.splitSearchParameterExpressions(paths)) {
+
+						if (!SearchParameterUtil.referencePathCouldPotentiallyReferenceCanonicalElement(
+								myContext, myResourceName, path, theReverse)) {
+							continue;
 						}
-						BaseRuntimeChildDefinition child =
-								myContext.getResourceDefinition(myResourceName).getChildByName(elementName);
-						if (child != null) {
-							BaseRuntimeElementDefinition<?> childDef = child.getChildByName(elementName);
-							if (childDef != null) {
-								if (childDef.getName().equals("Reference")) {
-									continue;
+
+						if (!next.getTargets().isEmpty()) {
+							// For each reference parameter on the resource type we're searching for,
+							// add all the potential target types to the list of possible target
+							// resource types we can look up.
+							for (var nextTarget : next.getTargets()) {
+								if (possibleTypes.contains(nextTarget)) {
+									targetResourceTypes.add(nextTarget);
 								}
 							}
+						} else {
+							// If we have any references that don't define any target types, then
+							// we need to assume that all enabled resource types are possible target
+							// types
+							targetResourceTypes.addAll(possibleTypes);
+							break;
 						}
-					}
-
-					if (!next.getTargets().isEmpty()) {
-						// For each reference parameter on the resource type we're searching for,
-						// add all the potential target types to the list of possible target
-						// resource types we can look up.
-						for (var nextTarget : next.getTargets()) {
-							if (possibleTypes.contains(nextTarget)) {
-								targetResourceTypes.add(nextTarget);
-							}
-						}
-					} else {
-						// If we have any references that don't define any target types, then
-						// we need to assume that all enabled resource types are possible target
-						// types
-						targetResourceTypes.addAll(possibleTypes);
-						break;
 					}
 				}
 			}
 		}
-		assert !targetResourceTypes.isEmpty();
+
+		if (targetResourceTypes.isEmpty()) {
+			return new CanonicalUrlTargets(Set.of(), Set.of());
+		}
 
 		Set<Long> hashIdentityValues = new HashSet<>();
 		Set<Integer> partitionIds = new HashSet<>();
@@ -2209,17 +2246,9 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 		return new CanonicalUrlTargets(hashIdentityValues, partitionIds);
 	}
 
-	static class CanonicalUrlTargets {
-
-		@Nonnull
-		final Set<Long> myHashIdentityValues;
-
-		@Nonnull
-		final Set<Integer> myPartitionIds;
-
-		public CanonicalUrlTargets(@Nonnull Set<Long> theHashIdentityValues, @Nonnull Set<Integer> thePartitionIds) {
-			myHashIdentityValues = theHashIdentityValues;
-			myPartitionIds = thePartitionIds;
+	record CanonicalUrlTargets(@Nonnull Set<Long> hashIdentityValues, @Nonnull Set<Integer> partitionIds) {
+		public boolean isEmpty() {
+			return hashIdentityValues.isEmpty();
 		}
 	}
 
@@ -2227,7 +2256,7 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 	 * This method takes in a list of {@link JpaPid}'s and returns a series of sublists containing
 	 * those pids where:
 	 * <ul>
-	 *     <li>No single list is most than {@literal theMaxLoad} entries</li>
+	 *     <li>No single list is more than {@literal theMaxLoad} entries</li>
 	 *     <li>Each list only contains JpaPids with the same partition ID</li>
 	 * </ul>
 	 */
@@ -2547,7 +2576,7 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 	/**
 	 * IncludesIterator, used to recursively fetch resources from the provided list of PIDs
 	 */
-	public class IncludesIterator extends BaseIterator<JpaPid> implements Iterator<JpaPid> {
+	private class IncludesIterator extends BaseIterator<JpaPid> implements Iterator<JpaPid> {
 
 		private final RequestDetails myRequest;
 		private final Set<JpaPid> myCurrentPids;
@@ -2616,13 +2645,13 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 			return retVal;
 		}
 	}
-
 	/**
 	 * Basic Query iterator, used to fetch the results of a query.
 	 */
 	private final class QueryIterator extends BaseIterator<JpaPid> implements IResultIterator<JpaPid> {
 
 		private final SearchRuntimeDetails mySearchRuntimeDetails;
+
 		private final RequestDetails myRequest;
 		private final boolean myHaveRawSqlHooks;
 		private final boolean myHavePerfTraceFoundIdHook;
@@ -2643,6 +2672,7 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 		private ISearchQueryExecutor myResultsIterator;
 
 		private boolean myFetchIncludesForEverythingOperation;
+
 		/**
 		 * The count of resources skipped because they were seen in earlier results
 		 */
@@ -2652,7 +2682,6 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 		 * (ie, not cached in previous searches)
 		 */
 		private int myNonSkipCount = 0;
-
 		/**
 		 * The list of queries to use to find all results.
 		 * Normal JPA queries will normally have a single entry.
@@ -2986,5 +3015,10 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 
 	public static void setMaxPageSizeForTest(Integer theTestSize) {
 		myMaxPageSizeForTests = theTestSize;
+	}
+
+	private static ScrollableResults<?> toScrollableResults(Query theQuery) {
+		org.hibernate.query.Query<?> hibernateQuery = (org.hibernate.query.Query<?>) theQuery;
+		return hibernateQuery.scroll(ScrollMode.FORWARD_ONLY);
 	}
 }
